--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
  </head>
-<body>
+<body class="bg-light">
     <header>
         <nav class="navbar navbar-expand-lg bg-white">
             <div class="container-fluid">
@@ -74,7 +74,7 @@
                       <div class="carousel-caption text-end">
                         <h1>Dignité</h1>
                         <p>Aménagement espaces viaires (Louis Vits X Bénétreaux Victor) [Logis Floréal, Watermal Boitsfort]</p>
-                        <p><a class="btn btn-lg btn-primary" href="#dignite">En lire plus</a></p>
+                        <p><a class="btn btn-lg btn-secondary" href="#dignite">En lire plus</a></p>
                       </div>
                     </div>
                   </div>
@@ -113,7 +113,51 @@
               </div>
             </div>
           </section>
-          
+          <svg id="wave" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 140" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(42, 40, 41, 1)" offset="0%"></stop><stop stop-color="rgba(42, 40, 41, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,56L80,28L160,112L240,42L320,112L400,112L480,70L560,0L640,70L720,98L800,0L880,56L960,112L1040,28L1120,70L1200,14L1280,14L1360,70L1440,126L1520,84L1600,56L1680,98L1760,84L1840,42L1920,28L1920,140L1840,140L1760,140L1680,140L1600,140L1520,140L1440,140L1360,140L1280,140L1200,140L1120,140L1040,140L960,140L880,140L800,140L720,140L640,140L560,140L480,140L400,140L320,140L240,140L160,140L80,140L0,140Z"></path></svg>
+          <section class="py-5 project1 text-white">
+            <div class="container">
+              <div class="row align-items-center">
+                <h1 class="mx-auto" data-aos="fade-up">01. ROCK</h1>
+                <p data-aos="fade-up"><small>Refuge de montagne [Col Mijta, Pyrénées-Orientales, France]</small></p>
+                <div class="col-md-5 text-center-mb-0 mb-md-0 mx-auto" data-aos="fade-up">
+                  <img src="./data/img/rock.png" alt="" class="img-fluid rounded shadow-lg" style=" object-fit: cover;">
+                </div>
+                
+                <div class="col-md-5 py-2 text-center-mb-0 mb-md-0 mx-auto" data-aos="fade-up">
+                  <img src="./data/img/p1.5.png" alt="" class="img-fluid rounded" style=" object-fit: cover;">
+                </div>
+
+                <div class="col-md-6 py-5 mx-auto text-center" data-aos="fade-up">
+                  <h2 class="mb-4"><strong>Un Rock entre deux rock</strong></h2>
+                  <p>
+                    Le refuge se pose comme une minuscule intervention dans l'immensité de la nature. Sa matière en bois brûlé s'imprègne de la force du lieu, de son caractère aride en été et glacial en hiver.
+                  </p>
+                  <p>
+                    Le plan est construit selon un principe d'évidement. Les espaces collectifs sont évidés dans la masse du cube à l'image d'une roche qu'on aurait taillée.
+                  </p>
+                  <p>
+                    La transition progressive du privé au commun se ressent par quelques marches marquant la hauteur des pièces.
+                  </p>
+                  <p>
+                    Tout le projet s'articule autour du foyer. Une circulation giratoire autour du pilier de ce projet : la cheminée. Je m'inspire des yourtes mongoles où le feu est au centre de tout. On revient à l'essence même de la condition humaine : être au sec, être nourri et avoir chaud.
+                  </p>
+                  <p>
+                    Un refuge chaleureux et minimaliste permettant de contempler tout en étant protégé.
+                  </p>
+                </div>
+                <h2 class="mb-4 text-center">géométraux</h2>
+                <div class="col-md-8 py-2 text-center-mb-0 mb-md-0 mx-auto" data-aos="fade-up">
+                  <img src="./data/img/gp1.png" alt="" class="img-fluid rounded" style=" object-fit: cover;">
+                </div>
+                <div class="col-md-8 py-2 text-center-mb-0 mb-md-0 mx-auto" data-aos="fade-up">
+                  <img src="./data/img/gp2.png" alt="" class="img-fluid rounded" style=" object-fit: cover;">
+                </div>
+                <div class="col-md-8 py-2 text-center-mb-0 mb-md-0 mx-auto" data-aos="fade-up">
+                  <img src="./data/img/gp3.png" alt="" class="img-fluid rounded" style=" object-fit: cover;">
+                </div>
+              </div>
+            </div>
+          </section>
     </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
