ajout de page projets

--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
               </div>
             </div>
           </section>
+          <svg id="wave" style="transform:rotate(0deg); transition: 0.3s; margin-bottom: -1px;" viewBox="0 0 1440 100" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(42, 40, 41, 1)" offset="0%"></stop><stop stop-color="rgba(42, 40, 41, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,60L10,50C20,40,40,20,60,23.3C80,27,100,53,120,56.7C140,60,160,40,180,38.3C200,37,220,53,240,65C260,77,280,83,300,85C320,87,340,83,360,68.3C380,53,400,27,420,25C440,23,460,47,480,55C500,63,520,57,540,50C560,43,580,37,600,33.3C620,30,640,30,660,35C680,40,700,50,720,51.7C740,53,760,47,780,41.7C800,37,820,33,840,28.3C860,23,880,17,900,26.7C920,37,940,63,960,76.7C980,90,1000,90,1020,90C1040,90,1060,90,1080,76.7C1100,63,1120,37,1140,25C1160,13,1180,17,1200,25C1220,33,1240,47,1260,53.3C1280,60,1300,60,1320,51.7C1340,43,1360,27,1380,25C1400,23,1420,37,1430,43.3L1440,50L1440,100L1430,100C1420,100,1400,100,1380,100C1360,100,1340,100,1320,100C1300,100,1280,100,1260,100C1240,100,1220,100,1200,100C1180,100,1160,100,1140,100C1120,100,1100,100,1080,100C1060,100,1040,100,1020,100C1000,100,980,100,960,100C940,100,920,100,900,100C880,100,860,100,840,100C820,100,800,100,780,100C760,100,740,100,720,100C700,100,680,100,660,100C640,100,620,100,600,100C580,100,560,100,540,100C520,100,500,100,480,100C460,100,440,100,420,100C400,100,380,100,360,100C340,100,320,100,300,100C280,100,260,100,240,100C220,100,200,100,180,100C160,100,140,100,120,100C100,100,80,100,60,100C40,100,20,100,10,100L0,100Z"></path></svg>
           <section class="py-5" style="background: #2A2829;">
             <div class="container">
               <div class="row align-items-center">
@@ -243,10 +244,44 @@
                     Voir les projets <i class="fas fa-arrow-right ms-2"></i>
                   </a>
                 </div>
-                             
               </div>
             </div>
           </section>
+          <svg id="wave" style="transform:rotate(180deg); transition: 0.3s; margin-top: -1px" viewBox="0 0 1440 220" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(42, 40, 41, 1)" offset="0%"></stop><stop stop-color="rgba(42, 40, 41, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,44L15,47.7C30,51,60,59,90,69.7C120,81,150,95,180,99C210,103,240,95,270,77C300,59,330,29,360,36.7C390,44,420,88,450,88C480,88,510,44,540,36.7C570,29,600,59,630,62.3C660,66,690,44,720,51.3C750,59,780,95,810,99C840,103,870,73,900,62.3C930,51,960,59,990,58.7C1020,59,1050,51,1080,73.3C1110,95,1140,147,1170,146.7C1200,147,1230,95,1260,66C1290,37,1320,29,1350,44C1380,59,1410,95,1440,124.7C1470,154,1500,176,1530,161.3C1560,147,1590,95,1620,88C1650,81,1680,117,1710,121C1740,125,1770,95,1800,99C1830,103,1860,139,1890,139.3C1920,139,1950,103,1980,80.7C2010,59,2040,51,2070,44C2100,37,2130,29,2145,25.7L2160,22L2160,220L2145,220C2130,220,2100,220,2070,220C2040,220,2010,220,1980,220C1950,220,1920,220,1890,220C1860,220,1830,220,1800,220C1770,220,1740,220,1710,220C1680,220,1650,220,1620,220C1590,220,1560,220,1530,220C1500,220,1470,220,1440,220C1410,220,1380,220,1350,220C1320,220,1290,220,1260,220C1230,220,1200,220,1170,220C1140,220,1110,220,1080,220C1050,220,1020,220,990,220C960,220,930,220,900,220C870,220,840,220,810,220C780,220,750,220,720,220C690,220,660,220,630,220C600,220,570,220,540,220C510,220,480,220,450,220C420,220,390,220,360,220C330,220,300,220,270,220C240,220,210,220,180,220C150,220,120,220,90,220C60,220,30,220,15,220L0,220Z"></path></svg>
+          <section class="py-5" id="contact">
+            <h2 class="text-center mx-auto fw-semibold text-decoration-underline">Contact</h2>
+            <div class="container py-5">
+              <div class="row">
+                <div class="col-md-6">
+                  <!-- Carte Google Maps -->
+                  <div class="card shadow-sm">
+                    <div class="card-body p-0">
+                      <div style="max-width:100%; list-style:none; transition:none; overflow:hidden; width:100%; height:500px;">
+                        <div id="my-map-canvas" style="height:100%; width:100%; max-width:100%;">
+                          <iframe style="height:100%; width:100%; border:0;" frameborder="0" 
+                                  src="https://www.google.com/maps/embed/v1/place?q=Place+séverine+36&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
+                          </iframe>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                
+                <div class="col-md-6">
+                  <!-- Informations de contact -->
+                  <div class="card shadow-sm">
+                    <div class="card-body">
+                      <h4 class="card-title">Me contacter</h4>
+                      <p><i class="fas fa-phone-alt"></i> Téléphone : <a href="tel:+32488881625">0488881625</a></p>
+                      <p><i class="fas fa-envelope"></i> Email : <a href="mailto:vitslouis@outlook.com">vitslouis@outlook.com</a></p>
+                      <p><i class="fas fa-map-marker-alt"></i> Adresse : Place Séverine 36, 1070 Anderlecht</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+          <svg id="wave" style="transform:rotate(0deg); transition: 0.3s; margin-bottom: -1px;" viewBox="0 0 1440 100" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(42, 40, 41, 1)" offset="0%"></stop><stop stop-color="rgba(42, 40, 41, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,70L10,60C20,50,40,30,60,28.3C80,27,100,43,120,46.7C140,50,160,40,180,35C200,30,220,30,240,25C260,20,280,10,300,16.7C320,23,340,47,360,55C380,63,400,57,420,45C440,33,460,17,480,13.3C500,10,520,20,540,25C560,30,580,30,600,28.3C620,27,640,23,660,21.7C680,20,700,20,720,31.7C740,43,760,67,780,71.7C800,77,820,63,840,58.3C860,53,880,57,900,55C920,53,940,47,960,38.3C980,30,1000,20,1020,25C1040,30,1060,50,1080,58.3C1100,67,1120,63,1140,55C1160,47,1180,33,1200,28.3C1220,23,1240,27,1260,30C1280,33,1300,37,1320,46.7C1340,57,1360,73,1380,80C1400,87,1420,83,1430,81.7L1440,80L1440,100L1430,100C1420,100,1400,100,1380,100C1360,100,1340,100,1320,100C1300,100,1280,100,1260,100C1240,100,1220,100,1200,100C1180,100,1160,100,1140,100C1120,100,1100,100,1080,100C1060,100,1040,100,1020,100C1000,100,980,100,960,100C940,100,920,100,900,100C880,100,860,100,840,100C820,100,800,100,780,100C760,100,740,100,720,100C700,100,680,100,660,100C640,100,620,100,600,100C580,100,560,100,540,100C520,100,500,100,480,100C460,100,440,100,420,100C400,100,380,100,360,100C340,100,320,100,300,100C280,100,260,100,240,100C220,100,200,100,180,100C160,100,140,100,120,100C100,100,80,100,60,100C40,100,20,100,10,100L0,100Z"></path></svg>
       <footer class="py-3 text-white">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item"><a href="#top" class="nav-link px-2 text-white">Accueil</a></li>
