--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
                           <div class="carousel-caption text-start">
                             <h1>ROCK</h1>
                             <p class="opacity-75">Refuge de montagne [Col Mijta, Pyrénées-Orientales, France]</p>
-                            <p><a class="btn btn-lg btn-secondary" href="#rock">En lire plus</a></p>
                           </div>
                         </div>
                     </div>                    
@@ -64,7 +63,6 @@
                           <div class="carousel-caption text-center">
                             <h1>PAR VIE</h1>
                             <p class="opacity-75">Logements collectifs [Gare de Calvoet, Uccle]</p>
-                            <p><a class="btn btn-lg btn-secondary" href="#pvie">En lire plus</a></p>
                           </div>
                         </div>
                     </div>    
@@ -74,7 +72,6 @@
                       <div class="carousel-caption text-end">
                         <h1>Dignité</h1>
                         <p>Aménagement espaces viaires (Louis Vits X Bénétreaux Victor) [Logis Floréal, Watermal Boitsfort]</p>
-                        <p><a class="btn btn-lg btn-secondary" href="#dignite">En lire plus</a></p>
                       </div>
                     </div>
                   </div>
@@ -115,7 +112,7 @@
           </section>
           <svg id="waved" style="transform:rotate(0deg); transition: 0.3s; margin-bottom: -1px;" viewBox="0 0 1440 140" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(42, 40, 41, 1)" offset="0%"></stop><stop stop-color="rgba(42, 40, 41, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,56L80,28L160,112L240,42L320,112L400,112L480,70L560,0L640,70L720,98L800,0L880,56L960,112L1040,28L1120,70L1200,14L1280,14L1360,70L1440,126L1520,84L1600,56L1680,98L1760,84L1840,42L1920,28L1920,140L1840,140L1760,140L1680,140L1600,140L1520,140L1440,140L1360,140L1280,140L1200,140L1120,140L1040,140L960,140L880,140L800,140L720,140L640,140L560,140L480,140L400,140L320,140L240,140L160,140L80,140L0,140Z"></path></svg>
           <section class="py-5 project1 text-white">
-            <div class="text-center">
+          <div class="text-center">
               <h2 class="fw-semibold text-decoration-underline" id="projet">Projets</h2>
             <!-- Button trigger modal -->
           <button type="button" class="btn btn-transparent" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -542,7 +539,7 @@
                   </div>
                 </div>
                 
-                <div class="col-md-6">
+                <div class="col-md-6 py-5">
                   <!-- Informations de contact -->
                   <div class="card shadow-sm">
                     <div class="card-body">
